support few variables